image missing and hover on mobile menu fix

--- a/index.css
+++ b/index.css
@@ -156,7 +156,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Quicksand", "Quicksand";}
     left: 2rem;
   }
 
-  .dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropdown-content {display: none;}
 }
 
 #shoppingCart{
